# discord-activity-bot

./: .bazelrc  .dockerignore  .gitignore  BUILD.bazel  Containerfile  MODULE.bazel  Makefile  README.md  SECURITY.md  go.mod  go.sum
.github/workflows/: build-and-publish.yml  test.yml
cmd/discord-activity-bot/: BUILD.bazel  main.go
configs/: sqlc.yaml
db/: BUILD.bazel  admin_roles.sql.go  analytics.sql.go  messages.sql.go  models.go  querier.go  response_channels.sql.go  traced_querier.go  users.sql.go
docs/: README.md
docs/api/: admin-commands.md  commands.md
docs/architecture/: overview.md
docs/development/: building.md
docs/operations/: configuration.md  monitoring.md  otel_setup.md
internal/bot/: BUILD.bazel  admin_commands.go  bot.go  commands.go  discord_trace.go  metrics_server.go  recovery.go  validation.go
internal/charts/: BUILD.bazel  image_graph.go
internal/pkg/: BUILD.bazel  circuitbreaker.go  command_ratelimit.go  logger.go  metrics.go  otel.go  ratelimit.go  tracing_coverage.go
internal/users/: BUILD.bazel  cached_user_service.go
migrations/: 000001_create_discord_messages.down.sql  000001_create_discord_messages.up.sql  000002_add_row_level_security.down.sql  000002_add_row_level_security.up.sql  000003_fix_unique_constraint.down.sql  000003_fix_unique_constraint.up.sql  000004_add_admin_roles.down.sql  000004_add_admin_roles.up.sql  000005_add_response_channel_config.down.sql  000005_add_response_channel_config.up.sql  000006_add_users_table.down.sql  000006_add_users_table.up.sql
queries/: admin_roles.sql  analytics.sql  messages.sql  response_channels.sql  users.sql
tools/: workspace_status.sh
