load("@gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/imeyer/discord-activity-bot
# gazelle:go_naming_convention go_default_library
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
        "-build_file_proto_mode=disable",
    ],
    command = "update-repos",
)
