module(
    name = "discord-activity-bot",
)

# Bazel dependencies
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.40.0")

bazel_dep(name = "buildifier_prebuilt", version = "7.3.1", dev_dependency = True)

# Go toolchain
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.0")

# Go dependencies from go.mod
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_bwmarrin_discordgo",
    "com_github_jackc_pgx_v5",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_exporters_otlp_otlpmetric_otlpmetrichttp",
    "io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracehttp",
    "io_opentelemetry_go_otel_metric",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_sdk_metric",
    "io_opentelemetry_go_otel_trace",
    "org_gonum_v1_gonum",
    "org_gonum_v1_plot",
)

