load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/imeyer/discord-activity-bot/cmd/discord-activity-bot",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/bot:go_default_library",
        "//internal/pkg:go_default_library",
        "@com_github_jackc_pgx_v5//pgxpool:go_default_library",
    ],
)

go_binary(
    name = "discord-activity-bot",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
    x_defs = {
        "main.version": "{STABLE_BUILD_VERSION}",
        "main.buildDate": "{BUILD_TIMESTAMP}",  
        "main.gitCommit": "{STABLE_BUILD_SCM_REVISION}",
    },
)
