load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "circuitbreaker.go",
        "command_ratelimit.go",
        "logger.go",
        "metrics.go",
        "otel.go",
        "ratelimit.go",
        "tracing_coverage.go",
    ],
    importpath = "github.com/imeyer/discord-activity-bot/internal/pkg",
    visibility = ["//:__subpackages__"],
    deps = [
        "@io_opentelemetry_go_otel//:go_default_library",
        "@io_opentelemetry_go_otel//attribute:go_default_library",
        "@io_opentelemetry_go_otel//codes:go_default_library",
        "@io_opentelemetry_go_otel//propagation:go_default_library",
        "@io_opentelemetry_go_otel//semconv/v1.24.0:go_default_library",
        "@io_opentelemetry_go_otel_exporters_otlp_otlpmetric_otlpmetrichttp//:go_default_library",
        "@io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracehttp//:go_default_library",
        "@io_opentelemetry_go_otel_metric//:go_default_library",
        "@io_opentelemetry_go_otel_sdk//resource:go_default_library",
        "@io_opentelemetry_go_otel_sdk//trace:go_default_library",
        "@io_opentelemetry_go_otel_sdk_metric//:go_default_library",
        "@io_opentelemetry_go_otel_trace//:go_default_library",
    ],
)
