load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["cached_user_service.go"],
    importpath = "github.com/imeyer/discord-activity-bot/internal/users",
    visibility = ["//:__subpackages__"],
    deps = [
        "//db:go_default_library",
        "//internal/pkg:go_default_library",
        "@com_github_bwmarrin_discordgo//:go_default_library",
        "@com_github_jackc_pgx_v5//pgtype:go_default_library",
        "@io_opentelemetry_go_otel//attribute:go_default_library",
    ],
)
